Verwysing nå döärverwyssyde repareerd ([[Den Bosch]] nå [['s-Hertogenbosch (stad)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Best.mw
+++ b/Best.mw
@@ -19,8 +19,7 @@ postkode = 5680 - 5685 |
 webstie = [http://www.gemeentebest.nl/ www.gemeentebest.nl] |
 }}
 
-
-'''Best''' is ne woansteade en gemeynde in de [[Nederlaand|neaderlandske]] provincy [[Noord-Broabant|Noordbråbant]], in de kulturele streake [[Kempen]]. Up den [[1 augustus|1. augustus]] van [[2020]] woanden der 30.073 lüde, volgens et CBS. De steade ligt up de krüsing van de autobanen [[Eindhoven]]-[[Tilburg]] en Eindhoven-[[Den Bosch]]. Et dorp Best is de höyvdsteade, mär binnen de gemeynde ligget ouk noch de kernen [[Aarle]] en [[De Vleut]].
+'''Best''' is ne woansteade en gemeynde in de [[Nederlaand|neaderlandske]] provincy [[Noord-Broabant|Noordbråbant]], in de kulturele streake [[Kempen]]. Up den [[1 augustus|1. augustus]] van [[2020]] woanden der 30.073 lüde, volgens et CBS. De steade ligt up de krüsing van de autobanen [[Eindhoven]]-[[Tilburg]] en Eindhoven-[['s-Hertogenbosch (stad)|Den Bosch]]. Et dorp Best is de höyvdsteade, mär binnen de gemeynde ligget ouk noch de kernen [[Aarle]] en [[De Vleut]].
 
 Et gemeyndelike gebeed höyrden vroger by de gemeynde [[Oirschot]] by an, mär is seyd [[1819]] selvstandig. Med in 1850 23 registreerde klumpenmakeryes stünd Best in et verleaden bekend as klumpendorp. Noch altyd ståt der in et landskap vöäle pöäpel. Ouk med [[karnaval]] wördt hyr noch når verweysen. Dan wördt Best ümmedöyped töt ''Klompengat''. De Skofabrik Bata en later Philips Healthcare sorgden at et inwoanertal stark groiden. Döär ne günstige liggen an et [[Wilhelminakanaal]] en et [[Beatrixkanaal]] groiden Best uut töt industriegemeynde.
 
