--- a/Eindhoown.mw
+++ b/Eindhoown.mw
@@ -16,10 +16,10 @@
 | verkeersoader =  [[A2]], [[A50]], [[A58]], [[A67]] en [[A270]]; spoorlienn [[Maastricht]]-[[Amsterdam]], Eindhoown-[[Skiphol]] en [[Venlo]]-[[Rotterdam]]
 | netnummer = 040
 | postkode = 5600 - 5658
-| webstie = [http://www.eindhoven.nl eindhoven.nl]
+| webstie = [http://www.eindhoven.nl/ eindhoven.nl]
 }}
 
-'''Eindhoown''' ([[Neerlaands]]: ''Eindhoven'') is ne [[stad (woonstee)|stad]] en [[gemeente]] in de [[Neerlaand]]se [[proveensie]] [[Noord-Broabaant]].
+'''Eindhoown''' ([[Neerlaands]]: ''Eindhoven'') is ne [[stad (woonstee)|stad]] en [[gemiente (bestuur)|gemeente]] in de [[Neerlaand]]se [[proveensie]] [[Noord-Broabaant]].
 
 De gemeente hef t viefdegrötste inwonnertal van Neerlaand, met op [[1 april]] [[2011]] 216.157 leu op n gebeed van 88,84&nbsp;km². De gemeente Eindhoown is deel van t [[koaderwetgebeed]] SRE (Samenwerkingsverband Regio Eindhoven) en stedelik netwoark BrabantStad. t Verstedelikt gebeed Eindhoown (nit duur mekoar haaln met t Saamnwoarkingsverbaand), wat besteet oet de gemeentes Eindhoown, [[Veeldhoown]], [[Best (gemeente)|Best]], [[Nuunn]] en [[Geeldrop-Mierlo]], hef zowat 440.000 inwonners op n gebeed van 540&nbsp;km². In t SRE wont zowat 700.000 leu.
 
