Verwysing nå döärverwyssyde repareerd ([[PSV]] nå [[Federatie van Philips Sport Verenigingen]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Eindhoown.mw
+++ b/Eindhoown.mw
@@ -32,7 +32,7 @@ n Naam ''Eindhoown'' keump oet n [[11e eeuw|11den]] of [[12e eeuw|12den eeuw]]. 
 
 ==Sport==
 Wat sport angeet is Eindhoown bekeand van onder meer:
-*[[PSV]] sportklub met as bekeandste onderdeel n vootbalklub, meermoals Nederlaands en Europees kampioen, dee't spölt in t [[Philips stadion]]. 
+*[[Federatie van Philips Sport Verenigingen|PSV]] sportklub met as bekeandste onderdeel n vootbalklub, meermoals Nederlaands en Europees kampioen, dee't spölt in t [[Philips stadion]]. 
 *[[Maarten van der Weijden]], weerldkampioen en olympies kampioen (Peking) lange ofstaandzwemn.
 *[[Pieter van den Hoogenband Zwemstadion]].
 
