[[:Kategorie:Plaotse in Noord-Braobant]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Best.mw
+++ b/Best.mw
@@ -31,3 +31,4 @@ Aarle, Salderes, Driehoek, Mosselaar, Verrenbest, Vleut, Wilhelminadorp, Batador
 
 [[Kategorie:Tweants artikel]]
 [[Kategorie:Gemeente in Noord-Braobant]]
+[[Kategorie:Plaotse in Noord-Braobant]]
