--- a/Soestwetterinklaanden.mw
+++ b/Soestwetterinklaanden.mw
@@ -13,10 +13,10 @@
 | postcode=8015
 | soorte=Wiek
 |ofbeelding2=Map NL Zwolle Soestweteringlanden.PNG|Ligging van Barkum in de gemiente Zwolle|oppervlak laand=11,07|oppervlak water=0,65|lokasie=|webstee=|oppervlak=11,72|verkeersoader=[[N337]]}}
-De '''Soestwetteringlaanden''' ([[Zwols]]: ''Soestweateringlanden,'' [[Nederlaands]]: ''Soestweteringlanden'') is een [[wiek]] in de gemiente [[Zwolle]]. De wiek lig in het stadsdiel [[Zwolle-Zuud]]. De buurtschoppen [[Harculo en Heug-Zuthem]] en [[Weensum]] ligt beide in de wiek. 
+De '''Soestwetterinklaanden''' ([[Zwols]]: ''Soestweterinklanden,'' [[Nederlaands]]: ''Soestweteringlanden'') is een [[wiek]] in de gemiente [[Zwolle]]. De wiek lig in het stadsdiel [[Zwolle-Zuud]]. De buurtschoppen [[Harculo en Heug-Zuthem]] en [[Weensum]] ligt beide in de wiek. 
 
 == Beschrieving ==
-De Soestwetteringlaanden is een laandelik gebied waor veural [[Boer|boeren]] woont. De [[Soestwettering]] streump in disse wiek de gemiente Zwolle in. De Soestwettering hef zien oorspronge an de [[Holterbärg]]. An de westziede van de wiek ku-j de [[Iessel]] vinden met daorbi'j de noe esloopte [[Iesselcentrale]]. Dit gebied hef [[Uuterweerd|uuterweerden]] die önderdiel bint van netuurgebieden. De [[N337]] löp van het noorden nao het zuden dwärs deur de wiek hen. Het buurtschop [[Herxen]] lig krek ten zuden van de gemientegreanze in de gemiente [[Olst-Wieje]].
+De Soestwetterinklaanden is een laandelik gebied waor veural [[Boer|boeren]] woont. De [[Soestwetterink]] streump in disse wiek de gemiente Zwolle in. De Soestwetterink hef zien oorspronge an de [[Holterbärg]]. An de westziede van de wiek ku-j de [[Iessel]] vinden met daorbi'j de noe esloopte [[Iesselcentrale]]. Dit gebied hef [[Uuterweerd|uuterweerden]] die önderdiel bint van netuurgebieden. De [[N337]] löp van het noorden nao het zuden dwärs deur de wiek hen. Het buurtschop [[Herxen]] lig krek ten zuden van de gemientegreanze in de gemiente [[Olst-Wieje]].
 
 In de wiek lig ook het olde dörpien [[Weensum]], die ontstaon is op een [[rivierduun]]. Het dörpshuus van Weensum, ''De Molenkamp'', hef zien näme van de [[Weensummer mölle]] die körtbi'j Weensum lig an de N337. 
 
