*Empty MediaWiki Message*

--- a/Soestwetterinklaanden.mw
+++ b/Soestwetterinklaanden.mw
@@ -1,5 +1,5 @@
 {{Ploats in Nederlaand
-| naam=Soestwetteringlaanden
+| naam=Soestwetterinklaanden
 | breedtegroad=52/29
 | lengtegroad=6/7
 | inwoners=905
@@ -12,7 +12,7 @@
 | netnummer=038
 | postcode=8015
 | soorte=Wiek
-|ofbeelding2=Map NL Zwolle Soestweteringlanden.PNG|Ligging van Barkum in de gemiente Zwolle|oppervlak laand=11,07|oppervlak water=0,65|lokasie=|webstee=|oppervlak=11,72|verkeersoader=[[N337]]}}
+|ofbeelding2=Map NL Zwolle Soestweteringlanden.PNG||oppervlak laand=11,07|oppervlak water=0,65|lokasie=|webstee=|oppervlak=11,72|verkeersoader=[[N337]]}}
 De '''Soestwetterinklaanden''' ([[Zwols]]: ''Soestweterinklanden,'' [[Nederlaands]]: ''Soestweteringlanden'') is een [[wiek]] in de gemiente [[Zwolle]]. De wiek lig in het stadsdiel [[Zwolle-Zuud]]. De buurtschoppen [[Harculo en Heug-Zuthem]] en [[Weensum]] ligt beide in de wiek. 
 
 == Beschrieving ==
