*Empty MediaWiki Message*

--- a/Schelle.mw
+++ b/Schelle.mw
@@ -17,7 +17,7 @@
 [[ofbeelding:Map - NL - Zwolle - Wijk 50 Schelle - Buurt 00 Oud Schelle.svg|thumb|De buurt Old Schelle in de wiek Schelle]]
 '''Schelle''' ([[Zwols]]: ''Skelle'') is een (veurmaolig) buurtschop en [[wiek]] in [[Zwolle]]. Schelle lig op een [[rivierduun]] die evörmd is in het [[Holoceen]]. 
 
-De wiek Schelle bestiet uut de volgende buurten: [[Old Schelle]], [[Schelle-Zuud en Oldeneel]], [[Schellerbroek]], [[Schellerhoek]], [[Schellerlaanden]], [[Oldenelerlaanden-West]], [[Oldenelerlaanden-Oost]], [[Oldenelerbroek]] en [[Katerveer-Engelse wärk]]. De wiek määkt noe diel uut van de Zwolse wiek [[Zwolle-Zuud]].
+De wiek Schelle bestiet uut de volgende buurten: [[Old Schelle]], [[Schelle-Zuud en Oldeneel]], [[Schellerbroek]], [[Schellerhoek]], [[Schellerlaanden]], [[Oldenelerlaanden-West]], [[Oldenelerlaanden-Oost]], [[Oldenelerbroek]] en [[Kaoterveer-Engelse wärk]]. De wiek määkt noe diel uut van de Zwolse wiek [[Zwolle-Zuud]].
 
 == Galleri'je ==
 <gallery widths="400" heights="400">
