*Empty MediaWiki Message*

--- a/Zwolle.mw
+++ b/Zwolle.mw
@@ -36,11 +36,11 @@ Zie ook de pagina [[Zwollerkärspel]]
 == Plaatsen in Zwolle ==
 In de gemeente Zwolle ligt t dörp [[Weensum]], wöör ok n skoele nöör is vernuumd. 
 
-t Ef de buurtskoppen: [[Brink-oek]], [[Bruggen-oek]], [[Frank-uus]], [[Öörst]], [[Ärklo]], [[Ärfte]], [[Oog Zuttem]], [[Katerveer]], [[Langen-olte]], [[De Lichtmis]] (diels), [[Oldeneel]], [[Schelle|Skelle]], [[Spoolde|Spoelde]], [[Veldhoek (Zwolle)|Veld-oek]], [[Wietem]] en [[Zalné]]. 
+t Ef de buurtskoppen: [[Brink-oek]], [[Bruggen-oek]], [[Frank-uus]], [[Öörst]], [[Ärklo]], [[Ärfte]], [[Oog Zuttem]], [[Kaoterveer]], [[Langen-olte]], [[De Lichtmis]] (diels), [[Oldeneel]], [[Schelle|Skelle]], [[Spoolde|Spoelde]], [[Veldhoek (Zwolle)|Veld-oek]], [[Wietem]] en [[Zalné]]. 
 
 t Ef de volgende woonwieken: [[Aa-landen]], [[Assendörp]], [[Barkum|Bärkum]], [[Diezerpoorte]], [[Anzeland]], [[Oltenbroek]], [[Kamperpoorte]], [[Märsweteringlanden]], [[Stadsägen]], [[Veerallee]], [[Westen-olte]], [[Wipstrik]] en [[Zwolle-Zuud]]
 
-Zwolle zes bedrieventerreinen: [[Anzeland]], [[Essenpoorte]], [[Märslanden]], [[Oosterenk]], [[Voorst (Zwolle)|Voorst]] en [[De Vrolik-eid]]
+Zwolle zes bedrieventerreinen: [[Anzeland]], [[Essenpoorte]], [[Märslanden]], [[Oosterenk]], [[Veurst (Zwolle)|Veurst]] en [[De Vrolik-eid]]
 
 En de veurmaolige gemiente [[Zwollerkärspel]] die now diel uutmaakt van Zwolle, was vrogger n zelfstandige gemiente.
 
