Verwysing nå döärverwyssyde repareerd ([[Kampen]] nå [[Kampen (Overiessel)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/H-deletie.mw
+++ b/H-deletie.mw
@@ -8,7 +8,7 @@ De eerste directe getugenis van h-deletie keump oet 't [[Oaldgrieks]], woar dat 
 
 Ze deankt dat 't vandoar ook noar 't [[Vulgair Latien]] is oawergoan, 't eerst in 't oosten. Zo is 't [[Italiaans]] van 't begin af al h-loos. In 't [[Spaans]] en [[Fraans]] doerden dat langer, wis ok omdat in 't Spaans nog 'n bod nieje h-klaanken ontsteunden (oet debuccalisering van de ''f-''). In wat [[Andalusisch]]e dialecten klinkt de h noe nog.
 
-Vanoet 't Frans sleug 't ok oawer noar de Germaanse talen, zowal noar 't zuudoostelik [[Engels]] as noar 't zuudewestelek [[Middelnederlaands|(Middel-)Nederlaands]]. 't Vlaams was in 'n darteenden eeuw al h-loos, in 't Vrogniejnederlaands volgden 't [[Zeeuws]] en de meeste [[Brabants]]e dialecten. Ook 't [[Urkers]] en 't westelk [[Sallaands]] is de h verdwenen, mar dat hef 'nen aanderen groond. Ze deankt dat in 'n achtteenden eauw de veurname leu in [[Kampen]] en [[Zwolle]] met 'n Fraans acceant gungen kuiern: met 'n briejende r en zunder h. Dat sleug eerst oawer noar de rest van de stadsbevolking. De bezundere oetsproak van de r bleef binnen de stadsgreanzen, mar de h-oetval verspreidde zik tot in de wiede umgeawing, zölfs tot op [[Urk]] en [[Schoklaand]].
+Vanoet 't Frans sleug 't ok oawer noar de Germaanse talen, zowal noar 't zuudoostelik [[Engels]] as noar 't zuudewestelek [[Middelnederlaands|(Middel-)Nederlaands]]. 't Vlaams was in 'n darteenden eeuw al h-loos, in 't Vrogniejnederlaands volgden 't [[Zeeuws]] en de meeste [[Brabants]]e dialecten. Ook 't [[Urkers]] en 't westelk [[Sallaands]] is de h verdwenen, mar dat hef 'nen aanderen groond. Ze deankt dat in 'n achtteenden eauw de veurname leu in [[Kampen (Overiessel)|Kampen]] en [[Zwolle]] met 'n Fraans acceant gungen kuiern: met 'n briejende r en zunder h. Dat sleug eerst oawer noar de rest van de stadsbevolking. De bezundere oetsproak van de r bleef binnen de stadsgreanzen, mar de h-oetval verspreidde zik tot in de wiede umgeawing, zölfs tot op [[Urk]] en [[Schoklaand]].
 
 Vrogger kwam h-deletie ok veur in 't [[Veenkelonioals|Veenkeloniaals]], mar doar schient 't binnen korten tied weer ummedreaid te wean.
 {{Dialekt|twd}}
