--- a/Woapen_van_de_Ommelanden.mw
+++ b/Woapen_van_de_Ommelanden.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Woapen_Ommelanden.JPG|right|250px|thumb|Ommelaander woapen op n biegebaauw van de [[Fraeylemabörg]].]]
+[[Ofbeelding:Woapen Ommelanden.jpg|250px|thumb|Ommelaander woapen op n biegebaauw van de [[Fraeylemabörg]].]]
 t '''Woapen van de Ommelanden''' bestaait oet n [[Heraldische kleur|silvern]] schild mit drij horizontoale banden van [[Heraldische kleur|azuur]]. Dizze drij banden stoan symbool veur de drij oorspronkelke [[Ommelanden]]: [[Hunzego]], [[Fivelgo]] en t [[Westerkwartaaier]]. Dizze blaauwe banden lopen van links onder noar rechts boven.
 
 Tuzzen de drij banden zitten 11 [[pompebloader]] van [[Heraldische kleur|keel]], die tegenswoordeg ook voak as [[hart|haarten]] oafbeeld worden. Dizzent stellen de 11 onderkwartaaiern veur. 
@@ -18,11 +18,11 @@ Tuzzen de drij banden zitten 11 [[pompebloader]] van [[Heraldische kleur|keel]],
 **[[Hoogeland (gewest)|Hoogeland]]
 
 == Vlag ==
-[[Ofbeelding:Flag ommelanden.gif|right|100px|Ommelaander vlag]]
+[[Ofbeelding:Flag ommelanden.gif|right|100px|border|Ommelaander vlag]]
 De vlag van de Ommelanden zugt der presies precies t zölfde oet, allend den op n vaaierkaant vlak, in stee van op n woapenschild.
 
 == Verwarren ==
-[[Ofbeelding:Frisian flag.svg|right|100px|Fraise vlag]]
+[[Ofbeelding:Frisian flag.svg|right|100px|border|Fraise vlag]]
 t Ommelaander woapen en de Ommelaander vlag worden dikmoals verward mit de [[Vlagge van Frieslaand|Fraise vlag]]. Doch zit der wel verschil in. De [[Frieslaand|Fraise]] vlag het de banden aandsom, van rechts onder noar links boven en t aantel pompebloader is 7. t Kleurverschil van de banden op dizze pagina het der niks mit te moaken.
 
 {{DEFAULTSORT:Woapen Ommelanden}}
