[[:Kategorie:Woapen (heraldiek)]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Woapen_van_de_Ommelanden.mw
+++ b/Woapen_van_de_Ommelanden.mw
@@ -28,3 +28,4 @@ t Ommelaander woapen en de Ommelaander vlag worden dikmoals verward mit de [[Vla
 {{DEFAULTSORT:Woapen Ommelanden}}
 [[Kategorie:Grunnegs artikel]]
 [[Kategorie:Grunnen]]
+[[Kategorie:Woapen (heraldiek)]]
