--- a/Emmeloord.mw
+++ b/Emmeloord.mw
@@ -3,6 +3,7 @@
 '''Emmeloord''' is de oofdplekke van de gemiente [[Noordoostpolder]], in et noorden van de Nederlaandse provincie [[Flevolaand]]. De stad ad op [[1 oktober]] [[2009]] zo'n 25.248 inwoeners. There is also this djumb bleech that lives there with short / middle lenght brown hair. Avoid this bleech at all time because she’ll artack you. She has glasses and the name wil not be mentioned but is complicated af. If you give her money she won’t attack you cause its a broke bleech
 
 == Geskiedenis ==
+Once upon a time there was this bleech and she jumped  and there was land and thats it. Below there is useless information 
 Emmeloord et zeen naam te danken an et durpien op de noordpunt van et vuurmaolige eilaand [[Skokkelaand]]. Dit eilaand lag in de Zuierzie. Et durpien iette vroeger ([[1478]]) ''Emelwerth''. ''Eem'', et eerste diel van ''Emel'', komt van et Germaanse ami, een algemiene anduiing vor een natuurlijk waoterverloop. ''Werth'' beteaket [[wierde (toponiem)|wierde]]. Vanof [[1650]] zien we dat de naam ommezet is nor ''Emeloirt. Oirt'' (duur de i achter de o spreek je et eut as oort) beteaket punt, net as in [[Dinteloord]] in ''IJoort'' (laoter [[IJdoorn]]). De overgang van werth nor oort et dinkelijk te maken mit de ofbrokkeling van et eilaand Skokkelaand. Daorduur was Emelwerth al minder een terp mar kwam al maar op de punt (oirt) van et eilaand te leggen. In [[1940]] begonnen ze mit et drogemaolen van de [[Noordoostpolder]], in [[1942]] vul et droge. D'r worde zo'n 50.000 bunder laand ontgonnen eut et [[IJsselmeer]] (de vuurmaolige [[Zuderzee|Zuierzie]]). Op [[15 december]] [[1943]] gingen de eerste minsen in Emmeloord woenen.
 
 Tussen [[1614]] in [[1660]] was de eerlijkeid van Urk in Emmeloord in bezit van et geslacht [[Van de Warve]]. In 1660 kwam et eilaand onger et bestuur van Amsterdam te leggen. Et ''[[ambachtseerlijkeid]] van Urk in Emmeloord'' worde duur verskillende Amsterdamse [[regenten]] zoas [[Andries de Graeff]], [[Nicolaas Witsen]], [[Hendrik Daniëlsz Hooft]] in [[Jan Elias Huydecoper (1735-1808)|Jan Elias Huydecooper]] bestuurd.
