Verwysing nå döärverwyssyde repareerd ([[Meerssen]] nå [[Meerssen (Utrecht)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Loenen_(vroggere_gemeente).mw
+++ b/Loenen_(vroggere_gemeente).mw
@@ -23,7 +23,7 @@ op-egaon = [[Stichtse Vecht]] |
 '''Loenen''' is ne veurmaolige [[gemiente (bestuur)|gemeente]] in de [[Vechtstraeke]] in de Nederlandse provinsie Utrecht en had ne oppervlakte van 27,32 km² (waorvan 8,70 km² water). De heufdplaatse is [[Loenen an de Vecht|Loenen an den Vecht]]. Sinds [[1 januari]] [[2011]] is de gemeente Loenen op-egaon in de ni'je gemeente [[Stichtse Vecht]].
 
 ==Name==
-Den name Loenen kump of van den olde benaming Lona. Dizzen name is trög te vinden op ne olde schenkingsakte van [[21 april]] [[953]]. Den name Lona is op verskedene wiezen uutelegd ewest, maor den meest geleufweerdigen is dat Loenen ofkump van et Duutse ''Lo'' (lucus) wat wold betekkent, mit de tovoging ''na'', zo as ok veurkump in Hattna ([[Houten]]) en Marsna ([[Meerssen]]). In de löppe van de tied wördden Lona verbasterd tot Loenen. Loenen hef zienen name dus te danken an de bosrieke umgaeving. Deur de veraandering van den waterstaand en verskillende grote störmen is daor neet völle van aover. 
+Den name Loenen kump of van den olde benaming Lona. Dizzen name is trög te vinden op ne olde schenkingsakte van [[21 april]] [[953]]. Den name Lona is op verskedene wiezen uutelegd ewest, maor den meest geleufweerdigen is dat Loenen ofkump van et Duutse ''Lo'' (lucus) wat wold betekkent, mit de tovoging ''na'', zo as ok veurkump in Hattna ([[Houten]]) en Marsna ([[Meerssen (Utrecht)|Meerssen]]). In de löppe van de tied wördden Lona verbasterd tot Loenen. Loenen hef zienen name dus te danken an de bosrieke umgaeving. Deur de veraandering van den waterstaand en verskillende grote störmen is daor neet völle van aover. 
 
 ==Kernen==
 *[[Loenen an den Vecht]] (gemeentehoes)
@@ -39,8 +39,8 @@ De meeste darpen deelt ne min of meer gemeenschoppeleke historie dee zaeker trö
 
 ==Galleri'je==
 <gallery>
-File:Loenen_aan_de_Vecht,_korenmolen_De_Hoop_RM26046_foto4_2015-08-06_18.20.jpg|Korenmölle De Hoop
-File:Loenen_anzicht.jpg|Anzicht op Loenen
+Loenen_aan_de_Vecht,_korenmolen_De_Hoop_RM26046_foto4_2015-08-06_18.20.jpg|Korenmölle De Hoop
+Loenen_anzicht.jpg|Anzicht op Loenen
 </gallery>
 
 {{Utrecht}}
