--- a/Huuslook.mw
+++ b/Huuslook.mw
@@ -65,5 +65,5 @@ Ofbeelding:Sempervivum arachnoideum ssp arachnoideum R0018339.JPG|''Sempervivum 
 
 {{Commons|Sempervivum}}
 
-{{Dialekt|sdz|[[Hardenbarg|Haddenbarreg]]}}
+{{Dialekt|sdz|[[Hardenbarg (stad)|Haddenbarreg]]}}
 [[Kategorie:Vetplaante]]
