Verwysing nå döärverwyssyde repareerd ([[Hardenbarg]] nå [[Hardenbarg (stad)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Nedersaksische_zinnen.mw
+++ b/Nedersaksische_zinnen.mw
@@ -315,7 +315,7 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |Het spijt me||'''t Spiet mi'j''||ut spiet mì-j
 |}
 
-; [[Hardenbarg|'n Arnbargers]] 
+; [[Hardenbarg (stad)|'n Arnbargers]] 
 {| {{prettytable}} cellpadding=3 cellspacing=0
 |- bgcolor=#eeeeee
 ! align=left | Nederlaans
