Verwysing nå döärverwyssyde repareerd ([[Hardenbarg]] nå [[Hardenbarg (stad)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Melancholie.mw
+++ b/Melancholie.mw
@@ -13,6 +13,6 @@ Düüsterkykende mensken künnet ear galle spyen oaver so betty alles hen; oaver
 ==Neadersassisk==
 * [[Vechtdals]]: ''duusterkiekn''
 
-{{Dialekt|sdz|[[Hardenbarg|Haddenbarreg]]}}
+{{Dialekt|sdz|[[Hardenbarg (stad)|Haddenbarreg]]}}
 
 [[Kategorie:Gemoedstoestaand]]
