Verwysing nå döärverwyssyde repareerd ([[Hardenbarg]] nå [[Hardenbarg (stad)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Natuurgodsdienst.mw
+++ b/Natuurgodsdienst.mw
@@ -3,6 +3,6 @@ De '''natuurgodsdienst''' of '''natuurrilligie''' is 'n [[rilligie]] wat veural 
 
 Der bint meestal völle goden, met elk netuurverschiensel is ter wel n god bi-j, drumme wördt t ok n völgodendom enuumd. Woar uut t vandan kump wet geniene, t bestiet effen zolange as ter meansen bint. A'j uut de tied kommen zol iej as n geest verdan goan, zo da'j veur oewen noabestoanden der ait nog ween kunt. Netuurgodsdiensten komt aoaveral op de weerld veur. t Is allinnig op völle plekken dan wal uut gebruuk ewörden, zo as beveurbeeld in [[Oldsaksiese godsdienst|Europa]] en [[Ruslaand]].
 
-{{Dialekt|sdz|[[Hardenbarg]]|Algemene Nedersaksiese Schriefwieze}}
+{{Dialekt|sdz|[[Hardenbarg (stad)|Hardenbarg]]|Algemene Nedersaksiese Schriefwieze}}
 
 [[Kategorie:Geleuf]]
