Verwysing nå döärverwyssyde repareerd ([[Hardenbarg]] nå [[Hardenbarg (stad)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Band_(samenleaving).mw
+++ b/Band_(samenleaving).mw
@@ -3,6 +3,6 @@ Een '''band''' of '''bandsamenleaving''' is de meyst eynvoldige wyse van samenle
 Alle tyden so'n betty bint bands [[jager-verzaamlaar|jager-gadderaar]] lüde. Der is een årdige gelykheid tüsken de mensken; se hebbet geyn last van 'ledders' en as der eyne wat houger steyt as een ander is dat mar tydelik, neet te arven.
 Et volk levt sleppend, vöärsöt sichsülven van wat se nöydig bint en hebbet noit te vöäle. Dårümme besteyt der ouk amper-an handel en ümdat wetten en reagels neet vaste ståt, hebbet se ouk geyn behoovde an skryven. Se hebbet geyn polityke groupen en hebbet geyn vasten leider, wülk eköäsen wörd nå syn gode dåden. Beslissings wördet ait [[demokraties|demokratisk]] of-epråt.
 
-{{Dialekt|sdz|[[Hardenbarg|Haddenbarreg]]}}
+{{Dialekt|sdz|[[Hardenbarg (stad)|Haddenbarreg]]}}
 
 [[Kategorie:Wikipedie:Gin Kattegerie]]
