*Empty MediaWiki Message*

--- a/Ziepe.mw
+++ b/Ziepe.mw
@@ -1,13 +1,13 @@
 '''Ziepe''' kan verwiezen naor:
 
-* [[Ziepe (reiniging)]] - spul veur schone te maeken
 * [[Ziepe (chemie)]] - zoolt van een vetzoer
 * [[Ziepe (gemeente)]] - een gemiente in Noord-Hollaand
-* [[Ofwasmiddel]] - spul daj' bruken om de ofwas mit te doen
-* [[Allesreiniger]] - een vloeiber huushooldelik schoonmaekmiddel
-* [[Douchegel]] - spul om de huud en et haor mit schone te maeken
-* [[Grune ziepe]] - een bepaold soort ziepe
-* [[Shampoo]] - spul om et haor mit te wassen
-* [[Wasmiddel]] - spul om de kleren mit te wassen
+* [[Ziepe (reiniging)]] - spul veur schone te maeken
+** [[Ofwasmiddel]] - spul daj' bruken om de ofwas mit te doen
+** [[Allesreiniger]] - een vloeiber huushooldelik schoonmaekmiddel
+** [[Douchegel]] - spul om de huud en et haor mit schone te maeken
+** [[Grune ziepe]] - een bepaold soort ziepe
+** [[Shampoo]] - spul om et haor mit te wassen
+** [[Wasmiddel]] - spul om de kleren mit te wassen
 
 {{dv}}
