*Empty MediaWiki Message*

--- a/Ziepe.mw
+++ b/Ziepe.mw
@@ -1,7 +1,7 @@
 '''Ziepe''' kan verwiezen naor:
 
 * [[Ziepe (chemie)]] - zoolt van een vetzoer
-* [[Ziepe (gemeente)]] - een gemiente in Noord-Hollaand
+* [[Ziepe (gemeente)]] - een veurmaolige gemiente in Noord-Hollaand
 * [[Ziepe (reiniging)]] - spul veur schone te maeken
 ** [[Ofwasmiddel]] - spul daj' bruken om de ofwas mit te doen
 ** [[Allesreiniger]] - een vloeiber huushooldelik schoonmaekmiddel
