Verwysing nå döärverwyssyde repareerd ([[Ziepe]] nå [[Ziepe (gemeente)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Schagen.mw
+++ b/Schagen.mw
@@ -18,7 +18,7 @@ netnummer = 0224, 0226 |
 postkode = 1738-1759 |
 webstie = [http://www.schagen.nl/ www.schagen.nl] |
 }}
-'''Schagen''' ([[West-Frees]]: ''Skagen'') is ne [[stad (woonstee)|stad]] en ne [[gemiente (bestuur)|gemeente]] in de Nederlaandse provinsie [[Noord-Hollaand]]. Daorbinnen ligt t in de regio [[West-Freeslaand]], en row-weg binnen t gebeed van den olde [[Gouw (Germaans)|gouw]] [[Westflinge]]. De gemeente op [[1 januari]] [[2013]] uutebreid mit de veurmaolige gemeenten [[Haorenkarspel]] en [[Ziepe]]. De inwonners van Schagen wordt vanolds ''Schagenezen'' eneumd.
+'''Schagen''' ([[West-Frees]]: ''Skagen'') is ne [[stad (woonstee)|stad]] en ne [[gemiente (bestuur)|gemeente]] in de Nederlaandse provinsie [[Noord-Hollaand]]. Daorbinnen ligt t in de regio [[West-Freeslaand]], en row-weg binnen t gebeed van den olde [[Gouw (Germaans)|gouw]] [[Westflinge]]. De gemeente op [[1 januari]] [[2013]] uutebreid mit de veurmaolige gemeenten [[Haorenkarspel]] en [[Ziepe (gemeente)|Ziepe]]. De inwonners van Schagen wordt vanolds ''Schagenezen'' eneumd.
 
 Behalve as "Skagen" steet Schagen in de umgaevink ok wal bekend under den ironiesen name "Sikago". Mangs wördt ok naor Schagen verwezzen mit den titel "Magnusveste", naor den legendariesen ridder Magnus.
 
@@ -98,7 +98,7 @@ In t beginne van de Golden Eeuwe kenden de leu in Schagen neet ne grote walvaort
 *[[Gesinus Gerhardus Kloeke]] - taalonderzeuker
 
 ==Uutgaonde verwiezingen==
-*[http://www.schagen.nl Webstae van de gemeente]
+*[http://www.schagen.nl/ Webstae van de gemeente]
 
 {{Noord-Hollaand}}
 
