Verwysing nå döärverwyssyde repareerd ([[Stad]] nå [[Stad (woonstee)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Schagen.mw
+++ b/Schagen.mw
@@ -23,7 +23,7 @@ webstie = [http://www.schagen.nl/ www.schagen.nl] |
 Behalve as "Skagen" steet Schagen in de umgaevink ok wal bekend under den ironiesen name "Sikago". Mangs wördt ok naor Schagen verwezzen mit den titel "Magnusveste", naor den legendariesen ridder Magnus.
 
 ==Plaatsen binnen de gemeente==
-[[Stad]]:
+[[Stad (woonstee)|Stad]]:
 *[[Schagen (stad)|Schagen]]
 
 {| class="vatop"
