Verwysing nå döärverwyssyde repareerd ([[Stad]] nå [[Stad (woonstee)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Helmond.mw
+++ b/Helmond.mw
@@ -19,7 +19,7 @@
 | webstie = 
 }}
 
-'''Helmond''' (plat ([[Helmonds]]): ''Héllemond'') is ne historiese [[stad]] en [[gemiente (bestuur)|gemeente]] in de previnsie [[Noord-Braobant]] in [[Nederlaand]]. De gemeente en stad hef 88958 inwonners en hef n oppervlak van 54,57 [[veerkante kilometer|km²]] (waorvan 0,10&nbsp;km² water). De gemeente Helmond mek deel oet van t [[kaderwetgebied]] [[SRE]] en stedelik netwark [[BraobantStad]].
+'''Helmond''' (plat ([[Helmonds]]): ''Héllemond'') is ne historiese [[Stad (woonstee)|stad]] en [[gemiente (bestuur)|gemeente]] in de previnsie [[Noord-Braobant]] in [[Nederlaand]]. De gemeente en stad hef 88958 inwonners en hef n oppervlak van 54,57 [[veerkante kilometer|km²]] (waorvan 0,10&nbsp;km² water). De gemeente Helmond mek deel oet van t [[kaderwetgebied]] [[SRE]] en stedelik netwark [[BraobantStad]].
 
 Helmond ligt aan de [[Zuud-Willemsvaort]] en de revier de [[Aa (Noord-Braobant)|Aa]].
 
