--- a/Snæfellsnes.mw
+++ b/Snæfellsnes.mw
@@ -1,11 +1,11 @@
-[[Ofbeelding:Map of the Snæfellsnes peninsula.png|250px|thumb|right]]
-[[Ofbeelding:Zuidkust Snæfellsnes.jpg|250px|thumb|right|Zuudköste.]]
+[[Bestaand:Map of the Snæfellsnes peninsula.png|250px|thumb]]
+[[Bestaand:Zuidkust Snæfellsnes.jpg|250px|thumb|Zuudköste.]]
 [[Bestaand:Búlandshöfði, Vesturland, Islandia, 2014-08-14, DD 080.JPG|duum|Búlandshöfði.]]
 '''Snæfellsnes''' is t grötste [[skiereilaand|skiereailaand]] van [[Ieslaand]] en leg tuskn n [[Faxaflói]]-baaj in t zuudn en n [[Breiðafjörður]]-[[fjord]] in t neurnd klemd. n Bargketn löp in eust-westlike richtige oawer de heale längte, en t heugste peunt doarvan is de 1446 meater heugn [[Snæfellsjökull]]. Det is n [[vulkaan]] met nzölfdn noam woar ok nen [[gletsjer]] öp leg. n Vulkaan kän öp meuje, friske däge vanoet [[Reykjavík]] zeen wörn, det önnevear 120 km zuudeustliker leg. Vlok biej n gletsjer kö'j n [[Bjarnafoss]] veendn.
 
 Snæfellsnes wör söms t ''mini-Ieslaand'' nömn, ömde't völle laandsköppe d'röp hef lign dee'j ok oawer n rest van t [[eilaand|eailaand]] trögveendn könt, zoo-as [[vulkaan|vulköane]], [[lavaveald|lavavealdn]], [[klif|klifn]], [[zwärt straand|zwärte straandn]], [[grot|grötte]], [[boasalt|boasaltförmoasies]], [[woaterval|woatervälle]], [[meer|meern]], wärme en kölde woaterkweln enz. Ne biejzöndreheaid is det d'r meardre kweln bint woar ech börlnd kolzuurholdnd mineroalwoater (''[[ölkelda]]'' in t [[Ieslaands]]) noar de öppervlokte börrel. De grötste en bekäntste is n [[Lýsuhóll]].
 
-Eankle [[dorp|dörpe]] en [[stad|städskns]] öp n neurdziejd van Snæfellsnes bint, van west noar eust, [[Rif]], [[Ólafsvík]], [[Grundarfjörður]] en [[Stykkishólmur]]. An de zuudköste ligt [[Arnarstapi]] en [[Hellnar]]. In t westn ligt [[Dritvík]] en [[Beruvík]], twea viskernsplöatskns dee noe verlöatn bint.
+Eankle [[dorp|dörpe]] en [[Stad (woonstee)|städskns]] öp n neurdziejd van Snæfellsnes bint, van west noar eust, [[Rif]], [[Ólafsvík]], [[Grundarfjörður]] en [[Stykkishólmur]]. An de zuudköste ligt [[Arnarstapi]] en [[Hellnar]]. In t westn ligt [[Dritvík]] en [[Beruvík]], twea viskernsplöatskns dee noe verlöatn bint.
 
 Biej [[Hellissandur]] (vlokbiej Rif) steet de heugste konstruksie van West-Europa, de zendmaste van t [[Zendstasjon Gufuskálar]].
 
