Verwysing nå döärverwyssyde repareerd ([[Stad]] nå [[Stad (woonstee)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Graffest.mw
+++ b/Graffest.mw
@@ -1,4 +1,4 @@
-'''Graffest''' (uutspraoke: ''Graffes''; [[Nederlaands|Nederlands]]: ''Grafhorst'') is n [[stad]] in de gemeente [[Kampen (Overiessel)|Kampen]], in de [[Nederlaand|Nederlandse]] provinsie [[Overiessel]]. Graffest kreeg in [[1333]] [[stadsrechten]], maar wördt vanwege de grootte meestentieds n [[dörp]] enuumd. Hoewel de geskiedenisse van de gemeenskap terugge giet töt 1333, verrinneweerde n [[braand|brand]] in 1849 zwat de ele stad. Maar drie van de zestig gebouwen stonnen döörnao nog overeind. In [[2007]] ad t ongeveer 1000 inwoners.
+'''Graffest''' (uutspraoke: ''Graffes''; [[Nederlaands|Nederlands]]: ''Grafhorst'') is n [[Stad (woonstee)|stad]] in de gemeente [[Kampen (Overiessel)|Kampen]], in de [[Nederlaand|Nederlandse]] provinsie [[Overiessel]]. Graffest kreeg in [[1333]] [[stadsrechten]], maar wördt vanwege de grootte meestentieds n [[dörp]] enuumd. Hoewel de geskiedenisse van de gemeenskap terugge giet töt 1333, verrinneweerde n [[braand|brand]] in 1849 zwat de ele stad. Maar drie van de zestig gebouwen stonnen döörnao nog overeind. In [[2007]] ad t ongeveer 1000 inwoners.
 
 Graffest ligt tussen t [[Ganzediep]], n water dät n verbinding vörmt met de rivier de [[Iessel]] en t [[Zwärte Meer]], en de [[Kamperzeediek]].
 
