Verwysing nå döärverwyssyde repareerd ([[Stad]] nå [[Stad (woonstee)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Łobez.mw
+++ b/Łobez.mw
@@ -1,5 +1,5 @@
 {| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''{{PAGENAME}}'''</big></big><br />''Łobez''
+|+<big><big>'''Łobez'''</big></big>
 |-
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
@@ -11,7 +11,7 @@
 | align=center colspan=2 | [[File:Lobez main street.jpg|250px]]
 |}
 
-'''Łobez''' ([[Duuts]]: ''Labes'') is n [[stad]] in t [[Pooln|Poolse]] woiwodskop [[West-Pommeren]], an de mond van de [[Rega]]. De stad had in [[2015]] 10.409<ref>Główny Urząd Statystyczny, dane za rok 2015, stan na 01.01.2015.[http://stat.gov.pl/obszary-tematyczne/ludnosc/ludnosc/powierzchnia-i-ludnosc-w-przekroju-terytorialnym-w-2015-r-,7,12.html]</ref> inwoners.
+'''Łobez''' ([[Duuts]]: ''Labes'') is n [[Stad (woonstee)|stad]] in t [[Pooln|Poolse]] woiwodskop [[West-Pommeren]], an de mond van de [[Rega]]. De stad had in [[2015]] 10.409<ref>Główny Urząd Statystyczny, dane za rok 2015, stan na 01.01.2015.[http://stat.gov.pl/obszary-tematyczne/ludnosc/ludnosc/powierzchnia-i-ludnosc-w-przekroju-terytorialnym-w-2015-r-,7,12.html]</ref> inwoners.
 
 == Inwoners ==
 <timeline>
@@ -66,9 +66,9 @@ PlotData=
 
 == Beziensweerdigheden ==
 <gallery>
-File:Lobez kosciol kz.jpg| 
-File:Kamienica w Łobzie (obok dworca PKP).jpg|
-File:Zabytkowa Poczta w Łobzie.JPG|
+Lobez kosciol kz.jpg
+Kamienica w Łobzie (obok dworca PKP).jpg
+abytkowa Poczta w Łobzie.JPG
 </gallery>
 
 == Zustersteden ==
@@ -85,9 +85,9 @@ File:Zabytkowa Poczta w Łobzie.JPG|
 * [http://www.lobez.pl Webstee] 
 * [http://www.bip.lobez.pl/ BIP Łobez]
 * [http://www.youtube.com/watch?v=mPWlmToO5FY/ Łobez - You Tube]
-* [http://pl.wikivoyage.org/wiki/%C5%81obez  Tourist Information]
-{{Commons|Łobez}}
+* [http://pl.wikivoyage.org/wiki/%C5%81obez Tourist Information]
 
+{{Commons|Łobez}}
 {{Dialekt|act}}
 
 [[Kategorie:Stad in Pooln]]
