Verwysing nå döärverwyssyde repareerd ([[Gemeente]] nå [[gemiente (bestuur)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Bargen_(Noorwegen).mw
+++ b/Bargen_(Noorwegen).mw
@@ -1,6 +1,6 @@
 [[Bestaand:Bergen Hanseviertel II.jpg|{{largethumb}}|De [[Hanzekade]] in Bargen]]
 [[Bestaand:Bergen - harbour.JPG|{{largethumb}}|De haawn]]
-'''Bargen''' is ne [[Stad (woonstee)|stad]] en [[gemeente]] in [[Hordalaand]] in et zuudwesten van [[Noorweagen]]. Et wörd wal es de stad tusken de zeuwen bargen neumd. Bargen wörd zeen as de heuwdstad van et [[Vestlandet]] (''Westland''). Bargen wör grondvest deur [[Olav Kyrre]] in [[1070]], met as naam ''Bjørgvin'', wat "de greune engte tusken de bargen" betekent. 
+'''Bargen''' is ne [[Stad (woonstee)|stad]] en [[gemiente (bestuur)|gemeente]] in [[Hordalaand]] in et zuudwesten van [[Noorweagen]]. Et wörd wal es de stad tusken de zeuwen bargen neumd. Bargen wörd zeen as de heuwdstad van et [[Vestlandet]] (''Westland''). Bargen wör grondvest deur [[Olav Kyrre]] in [[1070]], met as naam ''Bjørgvin'', wat "de greune engte tusken de bargen" betekent. 
 
 Bargen hef van anvang an ne leidende internasjonale handels- en zeevoartsstad west. In de golden tied van Noorweagen was et zelfs de heuwdstad van et land. Et was van ongevear 1600 töt 1830 Noorweagens grötste stad. Rechtevoort is et de tweedegrötste stad. Bergen was vanof 1600 de administrasiezettel en oetvoorhawen veur et Bargenhoes-len, ne besteurlike landsindeling dee et Westland en [[Noord-Noorweagen]] umvatten. Et stichtambt Bargenhoes in Bargen was et heuwdambt veur et [[Nordland|Noordlaandse]] ambt töt an [[1685]], toen as det oawergung noar [[Trondhjem]]s stichtambt. In [[1763]] wör et Noordelike Bargenhoesambt (later [[Sogn]] en [[Fjordane]]) ofsplitst as egen onderambt. Et oawerblievende Bargenhoesambt wör Søndre Bergenhusambt neumd in [[1766]] (later Hordaland). In [[1831]] wör et Bargenambt oetsplitst van et Søndre Bargenhoesambt. In [[1972]] wörden de gemeentes [[Arna]], [[Fana]], [[Laksevåg]] en Åsane inliefd bie de gemeente Bargen, terwiel as de provinsie Bargen deel wör van Hordaland. De gemeente Bargen gung veurbie de 275.000 inwonners an et eande van [[2014]]. 
 
