Verwysing nå döärverwyssyde repareerd ([[Europa]] nå [[Europa (werelddeel)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Bargen_(Noorwegen).mw
+++ b/Bargen_(Noorwegen).mw
@@ -6,7 +6,7 @@ Bargen hef van anvang an ne leidende internasjonale handels- en zeevoartsstad we
 
 In Bargen zit et Proveensiebesteur van Hordaland, de [[Gulating]] volksrechtbanke, [[Bisdom Bjørgvin]], et Viskeriejebesteur, de Konkurrensieroad, et zeewezen en et Noorse internasjonale skeepsregister. Doarnöast bint der nog nen rits zwoare spöllers in de [[kultuur]], [[ekonomie]], [[gezondheid]], [[onderzeuk]] en [[arbeid]].
 
-Bargen is et middelpunt veur de [[marine]] en skeepvoart- en petröllierelateerde onderzeuksinstellingen en ettensindustrie, dee as bie de volledigste en ontwikkelde van de wearld heurt. Bargen hef ne starke en völziedige ettensindustrie en banke- en verzekeringswezen, bouw en anleg, handel- en deenstverlening, hoogtechnologie, massamedia, leavensmiddelindustrie, toerismebranche en [[vervoor]]. Bargen hef ene van de drokste [[vlochthawen]]s van et Noorden en ene van de drokstbevoarene en bezöchte hawens van [[Europa]]. Et is et oetgangspunt veur de [[Hurtigruten]] en de [[Bergensbanen]]. 
+Bargen is et middelpunt veur de [[marine]] en skeepvoart- en petröllierelateerde onderzeuksinstellingen en ettensindustrie, dee as bie de volledigste en ontwikkelde van de wearld heurt. Bargen hef ne starke en völziedige ettensindustrie en banke- en verzekeringswezen, bouw en anleg, handel- en deenstverlening, hoogtechnologie, massamedia, leavensmiddelindustrie, toerismebranche en [[vervoor]]. Bargen hef ene van de drokste [[vlochthawen]]s van et Noorden en ene van de drokstbevoarene en bezöchte hawens van [[Europa (werelddeel)|Europa]]. Et is et oetgangspunt veur de [[Hurtigruten]] en de [[Bergensbanen]]. 
 
 De [[Hanzekade]] (''Bryggen i Bergen'') steet op de [[Wereldarfgoedlieste|wereldarfgoodlieste]] van [[UNESCO]] en dut der bod van at Bargen vrogger bie et [[Haanze|Hanzeverbond]] was. Et woapen van Bargen hef een borg met dree toorns op zeuwen bargen. Et woapen lik völ op det van de [[Duutslaand|Duutse]] steaden [[Hamborg]] en [[Lubekke]], dee ook bie Hanze warren.
 
