Verwysing nå döärverwyssyde repareerd ([[Gemeente]] nå [[gemiente (bestuur)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Skiedam.mw
+++ b/Skiedam.mw
@@ -1,4 +1,4 @@
-'''Skiedam''' is ne [[Stad (woonstee)|stad]] en [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. De gemeente heurt bie de [[Stadsstrekke Rotterdam]] en de [[Metropoolstrekke Rotterdam-Den Heag]].
+'''Skiedam''' is ne [[Stad (woonstee)|stad]] en [[gemiente (bestuur)|gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. De gemeente heurt bie de [[Stadsstrekke Rotterdam]] en de [[Metropoolstrekke Rotterdam-Den Heag]].
 
 Et ligt tusken [[Rotterdam]] en [[Vlaardingen]], van vroger oet an de [[Skie]] en an den [[Niejen Maas]]. In [[2015]] wonden der 76.858 leu op ne vlakte van 19,86 km². De stad steet bekeand um den [[jeneawer]], de oolde binnenstad met grachten en de hoogste [[weendmölle]]ns van de wearld.
 
