--- a/Sliedrecht_(gemeente).mw
+++ b/Sliedrecht_(gemeente).mw
@@ -18,7 +18,7 @@ netnummer = 0184 |
 postkode = 3360-3364 |
 webstie = [http://www.sliedrecht.nl www.sliedrecht.nl] |
 }}
-'''Sliedrecht''' is ne [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]], met as heuwdplaatse de lieknamige [[stad]] [[Sliedrecht (stad)|Sliedrecht]]. In de gemeente wont 24.791 leu op ne vlakte van 13,47 km². Sliedrecht lig an de [[Beneden-Merwede]]. Et is ene van de [[Drechtsteaden]].
+'''Sliedrecht''' is ne [[gemiente (bestuur)|gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]], met as heuwdplaatse de lieknamige [[stad]] [[Sliedrecht (stad)|Sliedrecht]]. In de gemeente wont 24.791 leu op ne vlakte van 13,47 km². Sliedrecht lig an de [[Beneden-Merwede]]. Et is ene van de [[Drechtsteaden]].
 
 Et gef wiedters gin aandere wonkernen in Sliedrecht, behalve de [[boerskop]] [[Baanhook]].
 
