--- a/Vlaardingen_(gemeente).mw
+++ b/Vlaardingen_(gemeente).mw
@@ -16,13 +16,14 @@ lengtegroad = 4/21/0/E |
 verkeersoader = [[A4]], [[A20]], [[NS Hoekse Lijn]] |
 netnummer = 010 |
 postkode = 3130 - 3139 |
-webstie = [http://www.vlaardingen.nl www.vlaardingen.nl] |
+webstie = [http://www.vlaardingen.nl/ www.vlaardingen.nl] |
 }}
 
-'''Vlaardingen''' is ne [[stad]] en [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Et lig an den [[Niejen Maas]], in et [[Rijnmoondgebeed]]. Et heurt bie de samenwaarking [[Stadsstrekke Rotterdam]] en de [[Metropoolstrekke Rotterdam-Den Heag]].
+'''Vlaardingen''' is ne [[Stad (woonstee)|stad]] en [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Et lig an den [[Niejen Maas]], in et [[Rijnmoondgebeed]]. Et heurt bie de samenwaarking [[Stadsstrekke Rotterdam]] en de [[Metropoolstrekke Rotterdam-Den Heag]].
 
 Der wont 71.719 leu op ne vlagte van 26,71 km². In de gemeente lignt een poar oolde döarpe, zo as et oolde [[Vlaardingerambacht]] (rechtevoort ne [[wieke]] van Vlaardingen) en den [[hearlikheaid]] [[Holy (wieke)|Holy]] (rechtevoort ook ne wieke). Wiedters löp der duur Vlaardingen de [[Vlaardingervoart]].
 
 {{Zuud-Hollaand}}
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Gemeente in Zuud-Hollaand]]
