--- a/Vlaardingen_(gemeente).mw
+++ b/Vlaardingen_(gemeente).mw
@@ -19,7 +19,7 @@ postkode = 3130 - 3139 |
 webstie = [http://www.vlaardingen.nl/ www.vlaardingen.nl] |
 }}
 
-'''Vlaardingen''' is ne [[Stad (woonstee)|stad]] en [[gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Et lig an den [[Niejen Maas]], in et [[Rijnmoondgebeed]]. Et heurt bie de samenwaarking [[Stadsstrekke Rotterdam]] en de [[Metropoolstrekke Rotterdam-Den Heag]].
+'''Vlaardingen''' is ne [[Stad (woonstee)|stad]] en [[gemiente (bestuur)|gemeente]] in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. Et lig an den [[Niejen Maas]], in et [[Rijnmoondgebeed]]. Et heurt bie de samenwaarking [[Stadsstrekke Rotterdam]] en de [[Metropoolstrekke Rotterdam-Den Heag]].
 
 Der wont 71.719 leu op ne vlagte van 26,71 km². In de gemeente lignt een poar oolde döarpe, zo as et oolde [[Vlaardingerambacht]] (rechtevoort ne [[wieke]] van Vlaardingen) en den [[hearlikheaid]] [[Holy (wieke)|Holy]] (rechtevoort ook ne wieke). Wiedters löp der duur Vlaardingen de [[Vlaardingervoart]].
 
