Verwysing nå döärverwyssyde repareerd ([[Stad]] nå [[Stad (woonstee)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Sittard-Geleen.mw
+++ b/Sittard-Geleen.mw
@@ -25,7 +25,7 @@
 ==Geschiedenis==
 In t gebied van wat noen de gemeente Sittard-Geleen is, ha'j ooit de oudste darpen van Nederland. 5000 jaor elejen woenden hier de [[Bandkeramiese kultuur|bandkeramiekers]]. Ze woenden in kleine nederzettingen mit zo'n 50 tot 150 inwoeners, in 5 tot 15 vrie grote huzen. Hulie woeningen laggen op de [[löss]]groenden kortbie de [[Geleenbeek]]. Nao zo'n 400 jaor bin disse eerste, van de landbouw levende, bewoeners uut disse kontreien vortegaon.
 
-De [[stad]] [[Sittard]] kreeg in [[1243]] [[stadsrechten]]. 
+De [[Stad (woonstee)|stad]] [[Sittard]] kreeg in [[1243]] [[stadsrechten]]. 
 
 [[Geleen]] wordde mit oender andere de darpen [[Oud-Geleen]] (of Op-Geleen), [[Lutteraoje]], [[Krawinkel]] en [[Spaans Neerbeek]] in [[1654]] verheven tot [[graafschap Geleen en Amstenraoje|graafschap]]. [[Limbricht]] was n [[vrieje rieksheerlikheid]] en had daormee n amparte staotus. Mit de komst van de Franse troepen in [[1794]] verdwenen de amparte posisies van de verschillende plaotsen. Vanof [[1815]], toe dit gebied oenderdeel gung uutmaken van t [[Koninkriek der Nederlaanden|Koninkriek der Nederlanden]], wordden der gemeenten evormd.
 
