Verwysing nå döärverwyssyde repareerd ([[Europa]] nå [[Europa (werelddeel)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Adrianopel.mw
+++ b/Adrianopel.mw
@@ -20,7 +20,7 @@
 | webstae = http://www.edirne.bel.tr/
 }}
 
-'''Adrianopel''' ([[Turks]]: ''Edirne''; [[Grieks]]: Αδριανούπολη, ''Adrianoúpoli''; [[Bulgaors]]: Одрин, ''Odrin''), is ne [[Stad (woonstee)|stad]] in t [[Europa|Europeese]] deel van [[Turkije]] en was de heufstad van t [[Ottomaanse Riek]].
+'''Adrianopel''' ([[Turks]]: ''Edirne''; [[Grieks]]: Αδριανούπολη, ''Adrianoúpoli''; [[Bulgaors]]: Одрин, ''Odrin''), is ne [[Stad (woonstee)|stad]] in t [[Europa (werelddeel)|Europeese]] deel van [[Turkije]] en was de heufstad van t [[Ottomaanse Riek]].
 
 ==Üütgande verywsingen==
 {{commonscat|Edirne}}
