Verwysing nå döärverwyssyde repareerd ([[Fries]] nå [[Westlaauwers Frais]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Noordoost-Frieslaand.mw
+++ b/Noordoost-Frieslaand.mw
@@ -16,8 +16,9 @@
 | brettegraod = 53/19/31
 | lengtegraod = 5/59/56
 | verkeersaoder =
-| webstee = [https://www.noardeast-fryslan.nl/]}}
-'''Noordoost-Frieslaand''' (officieel [[Fries]]: ''Noardeast-Fryslân'') is een gemiente mit 45.251 (1 jannewaori 2020<ref>CBS</ref>) binnen de gelieknaemige regio in [[Frieslaand]], die op 1 jannewaori 2019 ontstaon is uut de gemienten [[Dongerediel]], [[Ferwerderediel]] en [[Köllumerland en Nijkruusland|Kollumerlaand en Nijkruuslaand]].<ref>[http://www.kollumerland.nl/actueel/nieuws_3195/item/noardeast-fryslan-nieuwe-gemientenaam-dfk_10213.html Noordoost-Frieslaand ni'je gemientenaeme] gemientewebstee Kollumerlaand c.a.</ref>
+| webstee = [https://www.noardeast-fryslan.nl/]
+}}
+'''Noordoost-Frieslaand''' (officieel [[Westlaauwers Frais|Fries]]: ''Noardeast-Fryslân'') is een gemiente mit 45.251 (1 jannewaori 2020<ref>CBS</ref>) binnen de gelieknaemige regio in [[Frieslaand]], die op 1 jannewaori 2019 ontstaon is uut de gemienten [[Dongerediel]], [[Ferwerderediel]] en [[Köllumerland en Nijkruusland|Kollumerlaand en Nijkruuslaand]].<ref>[http://www.kollumerland.nl/actueel/nieuws_3195/item/noardeast-fryslan-nieuwe-gemientenaam-dfk_10213.html Noordoost-Frieslaand ni'je gemientenaeme] gemientewebstee Kollumerlaand c.a.</ref>
 
 == Geschiedenis ==
 In eerste instantie was et de bedoeling dat in de regio Noordoost-Frieslaand een nog grotere ni'je gemiente zol ontstaon uut de gemienten [[Dantumediel]], Dongerediel, Ferwerderediel en Kollumerlaand. Vanof 1 jannewaori 2017 bin disse vier gemienten ambtelik fuseerd. Dantumediel doet liekewel niet mit an de bestuurlike fusie en zal nao de vorming van de ni'je gemiente diensten ofnemen zonder dat ze zels een ambtelik apparaot het.<ref>[http://www.nieuwedockumercourant.nl/nieuws/55404/inwoners-dantumadiel-denken-mee-over-nieuwe-burgemeester/ Ni'jsbericht Dockumer Courant]</ref>
