Verwysing nå döärverwyssyde repareerd ([[Stad]] nå [[Stad (woonstee)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Noordoost-Frieslaand.mw
+++ b/Noordoost-Frieslaand.mw
@@ -33,7 +33,7 @@ Bi'j de gemienteraodsvergaodering van 2 jannewaori 2019 onthulde waornemend borg
 De gemiente bestaot uut de stad [[Dokkum]] en daornaost 52 dörpen. Diels bin de Friese naemen de officiële, diels de Nederlaandse.
 
 === Stad en dörpen ===
-In de gemiente liggen de volgende officiële woonplakken ([[stad|steden]] en [[dörp]]en):
+In de gemiente liggen de volgende officiële woonplakken ([[Stad (woonstee)|steden]] en [[dörp]]en):
 {|
 | width="50%" valign="top" |
 {| class="wikitable"
