*Empty MediaWiki Message*

--- a/Tirool.mw
+++ b/Tirool.mw
@@ -2,6 +2,6 @@
 
 * [[Tirool (gebeed)]] - t gebeed Tirool
 * [[Tirool (deelstaat)]] - de deelstaat Tirool
-* [[Tirool (gemeente)]] - ne gemeente in Zuud-Tirool ([[Italiën]])
+* [[Tirool (gemeente)]] - ne gemeente in Zuud-Tirool (Italiën)
 
 {{dv}}
