Verwysing nå döärverwyssyde repareerd ([[Limburg]] nå [[Limburg (Nederlaand)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Dinkelweite.mw
+++ b/Dinkelweite.mw
@@ -10,7 +10,7 @@ Der is nogal wel es verwarring of der noen wel of gien gluten in dinkelweite zit
 
 == Teelt ==
 === Projekten in Nederlaand ===
-Sinds enkele jaoren wörden dinkelweite oek weer in [[Nederlaand]] verbouwd. Meestentieds warken telers, meulenaars, bakkers en leveransiers binnen een bepaolde streek samen an de produkten. Twee projekten wördden uutevoerd in [[Limburg]] (onder de naam ''Kollenberger Spelt'') en rond [[Pieterburen]]. Laoter gungen ze t oek in aandere plaotsen verbouwen.
+Sinds enkele jaoren wörden dinkelweite oek weer in [[Nederlaand]] verbouwd. Meestentieds warken telers, meulenaars, bakkers en leveransiers binnen een bepaolde streek samen an de produkten. Twee projekten wördden uutevoerd in [[Limburg (Nederlaand)|Limburg]] (onder de naam ''Kollenberger Spelt'') en rond [[Pieterburen]]. Laoter gungen ze t oek in aandere plaotsen verbouwen.
 
 === In t butenlaand ===
 Dinkelweite wörden tegenswoordig verbouwd in [[Schwaben]] ([[ras]]sen: Bauländer Spelz, Schwabenkorn), [[Zwitserlaand]], [[Oostenriek]] (rassen: Hubel, Ostro) en [[België]] (rassen: Hercule, Redouté, Rouquin). Aandere rassen die in Duutslaand eteeld wörden bin Emilius, Franckenkorn (ontwikkeld deur n zekere Franck, zonder verbaand mit t laand [[Franken (gebied)|Franken]]), Holstenkorn en Oberkulmer Rotkorn.
