Verwysing nå döärverwyssyde repareerd ([[Tirool]] nå [[Tirool (gebeed)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Dinkelweite.mw
+++ b/Dinkelweite.mw
@@ -3,7 +3,7 @@
 '''Dinkelweite''', '''dinkel''' of '''spelt''' ([[Latien]]: ''Triticum spelta'') is n [[eenjaorige plaante]] uut de [[grezefamilie]] (''Poaceae'') uut t geslacht ''[[weite]]'' (''Tricitum''). t Is n [[graon]]soort, die al véúr [[7000 v.Chr.]] verbouwd wördden, en wörden ezien as n primitieve soort van de moederne weite. t Is veural verwant an de hybriden [[emmerweite]] en [[eenkoren]].
 
 == Geschiedenisse ==
-Dinkelweite kömp meugelik uut t [[Middenoosten]], mer waor t noen krek vandaon kömp is niet wisse. In de middeleeuwen wördden t al verbouwd in [[Zwitserlaand]], [[Duutslaand]] en in [[Tirool|Tirol]]. In de jaoren dernao is t verdröngen deur de moederne weite, umdat t niet epeld hoefden te wörden en n hogere opbrengst had. De leste jaoren wörden t liekewel weer populaerder in de biologiese laandbouw, deurdat der minder mest neudig is as bie weite, beter tegen ziektes kan en n zogenaamde harde korrel mit n hoog [[gluten]]gehalte, wat mooi uutkömp bie broodbakken. Dinkelweite tiert best op arme, kalkrieke grond.
+Dinkelweite kömp meugelik uut t [[Middenoosten]], mer waor t noen krek vandaon kömp is niet wisse. In de middeleeuwen wördden t al verbouwd in [[Zwitserlaand]], [[Duutslaand]] en in [[Tirool (gebeed)|Tirol]]. In de jaoren dernao is t verdröngen deur de moederne weite, umdat t niet epeld hoefden te wörden en n hogere opbrengst had. De leste jaoren wörden t liekewel weer populaerder in de biologiese laandbouw, deurdat der minder mest neudig is as bie weite, beter tegen ziektes kan en n zogenaamde harde korrel mit n hoog [[gluten]]gehalte, wat mooi uutkömp bie broodbakken. Dinkelweite tiert best op arme, kalkrieke grond.
 
 == Gluten ==
 Der is nogal wel es verwarring of der noen wel of gien gluten in dinkelweite zit, mer dat zit der dus wel in. Vergeleken mit de moederne weite zit der zelfs meer gluten in, wel is t zo dat disse vorm van gluten beter verteerbaor is waordeur t minder problemen gif as gewone weite. Deurdat der gluten in dinkelweite zit is t niet geschikt veur meensen mit [[seuliakie]] of [[glutenintoleransie]]. Deur de nauwe verwantschap an gewone weite is t niet geschikt veur meensen mit n [[weite-allergie]].
