Verwysing nå döärverwyssyde repareerd ([[Apeldoorne]] nå [[Apeldoorne (stad)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Gele_gis.mw
+++ b/Gele_gis.mw
@@ -36,7 +36,7 @@ De gele gis komt veur in [[heed (vegetasie)|heed]] begreuid mit veer uut mekaar 
 * [[Veluws]]:
 **''geelgors''
 **''gaelgors'' ([[Vaossen]])
-**''gors'' ([[Apeldoorne]])
+**''gors'' ([[Apeldoorne (stad)|Apeldoorne]])
 **''geelgisje{{small()|n}}'' of ''gis{{small()|jen}}'' ([[Putten]])
 **''gele gis'' ([[Putten]], [[Oldebroek]], [[Wezep]])
 **''gele gister'' ([[Nunspeet]])
@@ -55,7 +55,5 @@ De gele gis komt veur in [[heed (vegetasie)|heed]] begreuid mit veer uut mekaar 
 * [http://www.soortenbank.nl/soorten.php?soortengroep=vogels&record=Emberiza+citrinella SoortenBank.nl - beschrieving, ofbeeldingen en geluud]
 
 {{Dialekt|wvel|Putten|Algemene Nedersaksiese Schriefwieze}}
-
-{{DEFAULTSORT:Gele Gis}}
 
 [[Kategorie:Voegel]]
