Verwysing nå döärverwyssyde repareerd ([[Apeldoorne]] nå [[Apeldoorne (stad)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Nedersaksische_skeeldwöarde.mw
+++ b/Nedersaksische_skeeldwöarde.mw
@@ -9,7 +9,6 @@ t Geet op disse ziede um biezeundere wöarde. Ne direkte ummezetting van t Neerl
 Um n good beeld te geewn van de völziedigheaid, is dezelfde indelige an eheuldn as op t [[Nedersaksisch woordenboek|Neersassiese Wöardebook]], dus ne vaste riege van de Neersassiese variaantn met öare versie van t Hollaandse begrip det boawn an steet:
 
 *[[Neerlaands]]:
-
 *[[Achterhooks]]:
 *[[Drèents]]:
 *[[Grönnegs]]:
@@ -298,13 +297,13 @@ Um n good beeld te geewn van de völziedigheaid, is dezelfde indelige an eheuldn
 **''schraoie hering''
 **''skraotjämmer'' ([[Attem]])
 **''magere sliere'' ([[Elburg]])
-**''lange lies/lijs'' ([[Apeldoorne]], [[Vaossen]])
-**''lankhakke'' ([[Apeldoorne]])
+**''lange lies/lijs'' ([[Apeldoorne (stad)|Apeldoorne]], [[Vaossen]])
+**''lankhakke'' ([[Apeldoorne (stad)|Apeldoorne]])
 **''planke'' ([[Wezep]])
 **''striekplanke'' ([[Wezep]])
 **''sliepplanke'' ([[Heerde]], [[Waopenvelde]])
 **''lampeglas'' ([[Waopenvelde]])
-**''lempe'' ([[Apeldoorne]])
+**''lempe'' ([[Apeldoorne (stad)|Apeldoorne]])
 **''slanke denne'' ([[Emst]])
 **''sprikke'' ([[Nunspeet]], [[Elspeet]], [[Hattem]], [[Epe]])
 **''schraotjämmer'' ([[Heerde]], [[Waopenvelde]])
