Verwysing nå döärverwyssyde repareerd ([[Apeldoorne]] nå [[Apeldoorne (stad)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Dook_(weer).mw
+++ b/Dook_(weer).mw
@@ -33,7 +33,7 @@ Dook kin gevoarelk wezen. Ok n lutje bietje dook kin aal gevoarelk wezen, veuraa
 ** ''mist''
 ** ''damp''
 ** ''nevel'' (lochte mist)
-** ''deemster'' ([[Apeldoorne]])
+** ''deemster'' ([[Apeldoorne (stad)|Apeldoorne]])
 ** ''miesel'' ([[Vaossen]])
 ** mistig: naost ''mistig'', ''dampig'', ''nevelig'', ''deemsterig'' en ''motterig'' ([[Vaossen]]) he'j oek ''diezerig'' ([[Elburg]], [[Bunschoten]]) of ''diezig'' ([[Elburg]])
 
